--- a/20251015-hdr-uk-conference-satre/index.html
+++ b/20251015-hdr-uk-conference-satre/index.html
@@ -5,38 +5,69 @@
   <meta charset="UTF-8">
   <title>HDR UK Conference 2025: A standard architecture for TREs: why is it important in a federated world?</title>
   <style>
+    html {
+      color-scheme: light dark;
+    }
+
     body {
       font-family: Arial, Helvetica, sans-serif;
-      margin: 1em 5em;
+      font-size: 1.25rem;
+      line-height: 1.5;
+      max-width: min(70ch, 100% - 1rem);
+      margin-inline: auto;
+    }
+
+    img,
+    svg,
+    video {
+      max-width: 100%;
+      display: block;
     }
   </style>
 </head>
 
 <body>
   <h1>A standard architecture for TREs: why is it important in a federated world?</h1>
-  <p>HDR UK Conference, 15 October 2025</p>
+  <p>Part of the <a
+      href="https://www.hdruk.ac.uk/about/hdr-uk-conference/health-data-research-uk-conference-2025-agenda/">HDR UK
+      Conference 2025</a>, 15-16 October 2025</p>
+
+  <p>
+    <a href="https://doi.org/10.5281/zenodo.17305295"><img
+        src="https://zenodo.org/badge/DOI/10.5281/zenodo.17305295.svg" alt="DOI" />
+      Slides for the talk</a>.
+  </p>
 
   <h2>Links and supporting information</h2>
 
   <h3>SATRE: Standard Architecture for Trusted Research Environments</h3>
-  <p><a href="https://satre-specification.readthedocs.io">https://satre-specification.readthedocs.io</a></p>
+  <p>The <a href="https://satre-specification.readthedocs.io">SATRE specification</a>.</p>
 
   <h3>K8TRE: An open-source Kubernetes native TRE</h3>
-  <p><a href="https://docs.k8tre.org">https://docs.k8tre.org</a></p>
+  <p>Documentation for <a href="https://docs.k8tre.org">K8TRE</a>, which is under development and will provide a vendor
+    neutral open-source TRE that runs on most Kubernetes distributions.</p>
 
   <h3>SATRE Centric Control Alignment Table for Trusted Research Environments</h3>
-  <p><a href="https://zenodo.org/records/16837077">https://zenodo.org/records/16837077</a></p>
+  <p>A <a href="https://zenodo.org/records/16837077">mapping of SATRE to some relevant accreditations</a>, including ISO
+    27001, Digital Economy Act (DEA), Data Security and Protection Toolkit (DSPT), SDE accreditation, and Cyber
+    Essentials.</p>
 
   <h3>SATRE discussions</h3>
-  <p><a
-      href="https://github.com/sa-tre/satre-specification/issues">https://github.com/sa-tre/satre-specification/issues</a>
-  </p>
+  <p>SATRE is a community standard. Join the <a href="https://github.com/sa-tre/satre-specification/issues">discussions
+      on GitHub</a>.</p>
 
-  <h3>Semi-automated disclosure control</h3>
-  <p><a href="https://github.com/AI-SDC">https://github.com/AI-SDC</a></p>
+  <h3>DARE UK federated architecture blueprint</h3>
+  <p>A <a href="https://zenodo.org/records/14192786">federated architecture blueprint</a> for TREs, from DARE UK.</p>
+
+  <h3>TREvolution profile</h3>
+  <p>An <a href="https://zenodo.org/records/15479821">overview</a> of new capabilities that will be added to SATRE in
+    version 2 to support federated TREs.</p>
 
   <h3>RELEASE-AI: A framework to support artificial intelligence in TREs</h3>
-  <p><a href="https://zenodo.org/records/17159193">https://zenodo.org/records/1715919</a></p>
+  <p>A <a href="https://zenodo.org/records/17159193">draft framework</a> for handling AI/ML in TREs.</p>
+
+  <h3>Semi-automated disclosure control</h3>
+  <p><a href="https://github.com/AI-SDC">Tools to help with disclosure control</a>, including AI.</p>
 
 </body>
 
